Initialized React project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,278 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.side-menu {
+  background-color: #000;
+  padding: 100px 30px 0 30px;
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.icons {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  font-size: 30px;
+  color: #fff;
+}
+
+.icons svg {
+  margin: 20px 0;
+}
+
+.header {
+  width: 100%;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  border-bottom: 1px solid #ddd;
+  box-shadow: -3px 5px 6px -4px #ddd;
+}
+
+.header-p {
+  font-size: 22px;
+}
+
+.boxes {
+  display: flex;
+  margin: 20px;
+  gap: 10px;
+}
+
+.total-revenue {
+  flex: 1;
+  max-width: 300px;
+  background-color: #000;
+  color: #fff;
+  padding: 15px;
+  border-radius: 15px;
+  height: fit-content;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+}
+
+.f32 {
+  margin-top: 15px;
+  font-size: 32px;
+}
+
+.number {
+  width: 24%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.num-container {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 15px;
+}
+
+.est-revenue {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-container {
+  border-collapse: collapse;
+  margin: 10px auto;
+  box-shadow: 1px 4px 7px #ddd;
+  border-radius: 12px;
+  width: 95%;
+  padding: 35px 0;
+}
+img {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.img {
+  display: flex;
+  justify-content: center;
+}
+
+th {
+  font-weight: 400;
+  color: #666;
+}
+
+thead {
+  border-bottom: 1px solid #ddd;
+  margin: 5px;
+}
+
+table {
+  width: 100%;
+}
+
+table th,
+table td {
+  padding: 10px 8px;
+}
+
+.footer {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 5px;
+  padding-right: 30px;
+}
+ul {
+  list-style: none;
+}
+.profilelist {
+  flex: 1;
+}
+tbody {
+  cursor: pointer;
+}
+
+li {
+  display: flex;
+  gap: 20px;
+  padding: 15px 40px;
+  border-right: 1px solid #ddd;
+}
+
+li:hover {
+  color: #fff;
+  background-color: #000;
+  cursor: pointer;
+}
+.profile-page {
+  display: flex;
+  flex: 1;
+}
+
+.edit-form {
+  flex: 3;
+  padding: 10px 30px;
+  box-shadow: 1px 4px 7px #ddd;
+  margin: 0 10px 0 0;
+  border-radius: 12px;
+}
+
+.form-container {
+  display: flex;
+
+  align-items: center;
+  justify-content: space-around;
+}
+
+.form-header {
+  display: flex;
+  width: 97%;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.col {
+  height: 330px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 20px;
+}
+.input {
+  display: flex;
+  flex-direction: column;
+}
+label {
+  margin-bottom: 20px;
+}
+
+input {
+  padding: 10px 20px;
+}
+
+textarea {
+  padding: 14px;
+  width: 285px;
+  height: 79px;
+}
+
+.form-header p {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 200px;
+}
+.edit {
+  padding-bottom: 8px;
+  border-bottom: 4px solid #000;
 }
 
-.App-link {
-  color: #61dafb;
+.home,
+.profile-page-container {
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 8px;
+}
+
+.form-footer {
+  margin-top: 50px;
+  gap: 20px;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  gap: 10px;
+  border: 1px solid #ddd;
+  margin: 0 10px;
+  border-radius: 7px;
+}
+.search-container {
+  padding: 5px 10px;
+}
+
+.search-n-btn {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  width: 500px;
+}
+.searchbar {
+  flex: 2;
+}
+
+.checkbox,
+label {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.checkbox-1,
+.checkbox-2 {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.victor {
+  margin-top: 12px;
+}
+
+.profile-page p,
+.input label,
+.search-container p {
+  color: #777;
 }
